--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,13 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#81171B</color>
+    <color name="primaryGreen">#1B4332</color>
+    <color name="secondaryGreen">#2D6A4F</color>
+    <color name="accentGreen">#95D5B2</color>
+    <color name="backgroundDark">#081C15</color>
+    <color name="textWhite">#FFFFFF</color>
+    <color name="textAccent">#D8F3DC</color>
+    <color name="backgroundDarkGreen">#1B5E20</color>
+    <color name="backgroundLightGreen">#33691E</color>
+    <color name="hint">#A5D6A7</color>
 </resources>
