--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.Proje" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <!-- AppCompat tabanlı tema -->
+    <style name="Theme.Proje" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="colorPrimary">@color/primaryGreen</item>
+        <item name="colorPrimaryVariant">@color/secondaryGreen</item>
+        <item name="colorSecondary">@color/accentGreen</item>
+        <item name="android:textColor">@color/textWhite</item>
+        <item name="android:windowBackground">@color/backgroundDark</item>
     </style>
-
-    <style name="Theme.Proje" parent="Base.Theme.Proje" />
 </resources>
