--- a/app/src/main/res/layout/fragment_add_car.xml
+++ b/app/src/main/res/layout/fragment_add_car.xml
@@ -25,7 +25,7 @@
                 android:id="@+id/edtBrand"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
+                android:textColor="@color/secondaryGreen"
                 android:textSize="16sp"
                 android:hint="Marka"
                 app:boxStrokeColor="@color/primaryGreen"
@@ -43,7 +43,7 @@
                 android:id="@+id/edtModel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
+                android:textColor="@color/secondaryGreen"
                 android:textSize="16sp"
                 android:hint="Model"
                 app:boxStrokeColor="@color/primaryGreen"
@@ -62,7 +62,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
-                android:textColor="@color/white"
+                android:textColor="@color/secondaryGreen"
                 android:textSize="16sp"
                 android:hint="Yıl"
                 app:boxStrokeColor="@color/primaryGreen"
@@ -81,7 +81,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
-                android:textColor="@color/white"
+                android:textColor="@color/secondaryGreen"
                 android:textSize="16sp"
                 android:hint="Fiyat"
                 app:boxStrokeColor="@color/primaryGreen"
