--- a/app/src/main/res/layout/fragment_car_list.xml
+++ b/app/src/main/res/layout/fragment_car_list.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:background="@color/backgroundDarkGreen">
+    android:orientation="vertical"
+    android:background="@color/backgroundDarkGreen"
+    tools:context=".UI.CarListFragment"
+    android:fitsSystemWindows="true">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewCars"
@@ -16,4 +19,4 @@
         android:clipToPadding="false"
         android:paddingBottom="16dp"
         android:background="@android:color/white" />
-</androidx.fragment.app.FragmentContainerView>
+</LinearLayout>
