--- a/app/src/main/res/layout/item_car.xml
+++ b/app/src/main/res/layout/item_car.xml
@@ -1,64 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="16dp"
-    android:elevation="4dp"
-    app:cardCornerRadius="8dp"
-    app:cardBackgroundColor="@color/backgroundLightGreen">
+    android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="5dp"
+        android:elevation="4dp"
+        app:cardCornerRadius="8dp"
+        app:cardBackgroundColor="@color/backgroundLightGreen"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintWidth_percent="0.9">
 
-        <!-- Araba Marka -->
-        <TextView
-            android:id="@+id/txtBrand"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Marka"
-            android:textColor="@color/textWhite"
-            android:textSize="16sp" />
+            android:orientation="vertical"
+            android:padding="16dp">
 
-        <!-- Araba Model -->
-        <TextView
-            android:id="@+id/txtModel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Model"
-            android:textColor="@color/textWhite"
-            android:textSize="16sp" />
+            <!-- Araba Marka -->
+            <TextView
+                android:id="@+id/txtBrand"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Marka"
+                android:textColor="@color/textWhite"
+                android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/txtYear"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Yıl"
-            android:textColor="@color/textWhite"
-            android:textSize="16sp" />
+            <!-- Araba Model -->
+            <TextView
+                android:id="@+id/txtModel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Model"
+                android:textColor="@color/textWhite"
+                android:textSize="16sp" />
 
-        <!-- Araba Fiyatı -->
-        <TextView
-            android:id="@+id/txtPrice"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Fiyat"
-            android:textColor="@color/accentGreen"
-            android:textSize="18sp"
-            android:layout_marginTop="8dp" />
+            <!-- Araba Yıl -->
+            <TextView
+                android:id="@+id/txtYear"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Yıl"
+                android:textColor="@color/textWhite"
+                android:textSize="16sp" />
 
-        <!-- Silme Butonu -->
-        <ImageButton
-            android:id="@+id/btnDelete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_delete"
-            android:contentDescription="Sil"
-            android:layout_gravity="end"
-            android:layout_marginTop="8dp"
-            app:tint="@color/textWhite" />
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+            <!-- Araba Fiyatı -->
+            <TextView
+                android:id="@+id/txtPrice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Fiyat"
+                android:textColor="@color/accentGreen"
+                android:textSize="18sp"
+                android:layout_marginTop="8dp" />
+
+            <!-- Silme Butonu -->
+            <ImageButton
+                android:id="@+id/btnDelete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_delete"
+                android:contentDescription="Sil"
+                android:layout_gravity="end"
+                android:layout_marginTop="8dp"
+                app:tint="@color/red" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
