--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.Proje" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+    <style name="Base.Theme.Proje" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/primaryGreen</item>
+        <item name="colorPrimaryVariant">@color/secondaryGreen</item>
+        <item name="colorSecondary">@color/accentGreen</item>
+        <item name="android:textColor">@color/textWhite</item>
+        <item name="android:windowBackground">@color/backgroundDark</item>
     </style>
+
+    <style name="Theme.Proje" parent="Base.Theme.Proje" />
 </resources>
