--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- AppCompat tabanlı tema -->
-    <style name="Theme.Proje" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Base.Theme.Proje" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/primaryGreen</item>
         <item name="colorPrimaryVariant">@color/secondaryGreen</item>
         <item name="colorSecondary">@color/accentGreen</item>
         <item name="android:textColor">@color/textWhite</item>
         <item name="android:windowBackground">@color/backgroundDark</item>
     </style>
+
+    <style name="Theme.Proje" parent="Base.Theme.Proje" />
 </resources>
