--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,20 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:startDestination="@id/listFragment">
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/carListFragment">
 
     <fragment
-        android:id="@+id/listFragment"
+        android:id="@+id/carListFragment"
         android:name="com.example.proje.UI.CarListFragment"
-        android:label="Araba Listesi" />
+        android:label="İlanlar">
+        <action
+            android:id="@+id/action_carListFragment_to_editCarFragment"
+            app:destination="@id/editCarFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/myCarListFragment"
+        android:name="com.example.proje.UI.MyCarListFragment"
+        android:label="İlanlarım">
+        <action
+            android:id="@+id/action_myCarListFragment_to_editCarFragment"
+            app:destination="@id/editCarFragment" />
+        <action
+            android:id="@+id/action_myCarListFragment_to_addCarFragment"
+            app:destination="@id/addCarFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/addCarFragment"
         android:name="com.example.proje.UI.AddCarFragment"
-        android:label="Araba Ekle" />
+        android:label="İlan Ekle">
+        <action
+            android:id="@+id/action_addCarFragment_to_myCarListFragment"
+            app:destination="@id/myCarListFragment"
+            app:popUpTo="@id/myCarListFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
 
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.example.proje.UI.ProfileFragment"
         android:label="Profil" />
+
+    <fragment
+        android:id="@+id/editCarFragment"
+        android:name="com.example.proje.UI.EditCarFragment"
+        android:label="İlan Düzenle">
+        <argument
+            android:name="car_id"
+            app:argType="integer" />
+        <argument
+            android:name="car_brand"
+            app:argType="string" />
+        <argument
+            android:name="car_model"
+            app:argType="string" />
+        <argument
+            android:name="car_year"
+            app:argType="integer" />
+        <argument
+            android:name="car_price"
+            app:argType="float" />
+        <argument
+            android:name="car_userId"
+            app:argType="string" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/adminUserListFragment"
+        android:name="com.example.proje.UI.AdminUserListFragment"
+        android:label="Kullanıcı Yönetimi" />
+
 </navigation>
