--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
         android:layout_marginTop="100dp" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/kullaniciadiLayout"
+        android:id="@+id/usernameLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/tv_login_title"
@@ -35,33 +35,11 @@
             android:layout_height="56dp"
             android:textColor="@color/secondaryGreen"
             android:textSize="18sp"
-            android:hint="Kullanıcı Adı"
+            android:hint="Kullanıcı Adı veya E-posta"
             app:boxBackgroundColor="@color/backgroundDark"
             app:boxStrokeColor="@color/accentGreen"
             app:hintTextColor="@color/textAccent"
-            app:hintEnabled="true"
-            />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/emailLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/kullaniciadiLayout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="32dp">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edtEmail"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:textColor="@color/secondaryGreen"
-            android:textSize="18sp"
-            android:hint="Email"
-            app:boxBackgroundColor="@color/backgroundDark"
-            app:boxStrokeColor="@color/accentGreen"
-            app:hintTextColor="@color/textAccent" />
+            app:hintEnabled="true" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -69,7 +47,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:passwordToggleEnabled="true"
-        app:layout_constraintTop_toBottomOf="@id/emailLayout"
+        app:layout_constraintTop_toBottomOf="@id/usernameLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp">
@@ -111,6 +89,20 @@
         android:backgroundTint="@color/accentGreen"
         app:cornerRadius="16dp"
         app:layout_constraintTop_toBottomOf="@id/btnLogin"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnGuestLogin"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:text="Misafir Olarak Devam Et"
+        android:textColor="@color/textWhite"
+        android:textSize="20sp"
+        android:backgroundTint="@color/accentGreen"
+        app:cornerRadius="16dp"
+        app:layout_constraintTop_toBottomOf="@id/btnRegister"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"/>
