--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/listFragment"
-        android:icon="@android:drawable/ic_menu_agenda"
-        android:title="@string/lanlar" />
+        android:id="@+id/carListFragment"
+        android:icon="@drawable/ic_list"
+        android:title="İlanlar" />
 
     <item
-        android:id="@+id/addCarFragment"
-        android:icon="@android:drawable/ic_input_add"
-        android:title="@string/ekle" />
+        android:id="@+id/myCarListFragment"
+        android:icon="@drawable/ic_my_list"
+        android:title="İlanlarım" />
+
+    <item
+        android:id="@+id/adminUserListFragment"
+        android:icon="@drawable/ic_admin"
+        android:title="Kullanıcılar" />
 
     <item
         android:id="@+id/profileFragment"
-        android:icon="@android:drawable/ic_menu_myplaces"
-        android:title="@string/profil" />
+        android:icon="@drawable/ic_profile"
+        android:title="Profil" />
 
 </menu>
